[package]
name = "cvdl"
version = "0.1.0"
authors = ["Sarmad Gulzar <sarmadgulzar@hotmail.com>"]
edition = "2018"
description = "A library for Computer Vision and Deep Learning."
homepage = "https://github.com/cvdlai/rust-cvdl"
documentation = "https://github.com/cvdlai/rust-cvdl"
repository = "https://github.com/cvdlai/rust-cvdl"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
